# foxglove-sdk

./: package.json
c/: cbindgen.prelude.toml  cbindgen.toml
c/include/foxglove-c/: foxglove-c.h
c/src/: channel.rs  lib.rs  server.rs
cpp/: examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
cpp/_sources/: examples.rst.txt  index.rst.txt
cpp/foxglove/include/foxglove/: playback_control_request.hpp  player_state.hpp  server.hpp
cpp/foxglove/src/: server.cpp
cpp/foxglove/tests/: test_server.cpp
python/: examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
python/_sources/: examples.rst.txt  index.rst.txt
python/_sources/api/: index.rst.txt
python/api/: channels.html  index.html  schemas.html
python/foxglove-sdk/: Cargo.toml
python/foxglove-sdk/python/foxglove/: websocket.py
python/foxglove-sdk/python/foxglove/_foxglove_py/: websocket.pyi
python/foxglove-sdk/src/: websocket.rs
rust/examples/ws_stream_mcap/src/: main.rs
rust/foxglove/: Cargo.toml
rust/foxglove/src/: websocket.rs  websocket_server.rs
rust/foxglove/src/websocket/: capability.rs  connected_client.rs  server.rs  server_listener.rs  tests.rs
rust/foxglove/src/websocket/ws_protocol/: client.rs  parse_error.rs  tungstenite.rs
rust/foxglove/src/websocket/ws_protocol/client/: playback_control_request.rs
rust/foxglove/src/websocket/ws_protocol/server/: server_info.rs
rust/foxglove/src/websocket/ws_protocol/server/snapshots/: foxglove__websocket__ws_protocol__server__server_info__tests__encode_full.snap
