[package]
name = "foxglove"
description = "Foxglove SDK"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["derive", "live_visualization", "lz4", "zstd", "unstable"]
chrono = ["dep:chrono"]
derive = ["dep:foxglove_derive"]
agent = ["live_visualization"]
live_visualization = [
  "dep:base64",
  "dep:flume",
  "dep:futures-util",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tokio-tungstenite",
  "dep:serde_repr",
  "dep:serde_with",
]
lz4 = ["mcap/lz4"]
tls = [
  "live_visualization",
  "tokio-tungstenite/rustls-tls-native-roots",
  "dep:aws-lc-rs",
  "dep:tokio-rustls",
  "dep:rcgen",
]
schemars = ["dep:schemars"]
unstable = []
zstd = ["mcap/zstd"]

[lints]
workspace = true

[dependencies]
arc-swap = "1.7.1"
aws-lc-rs = { version = "1.13.3", optional = true, features = ["bindgen"] }
base64 = { version = "0.22", optional = true }
bimap = "0.6.3"
bytes.workspace = true
chrono = { version = "0.4.39", optional = true }
delegate = "0.13.2"
flume = { version = "0.11.1", optional = true }
foxglove_derive = { version = "0.15.3", path = "../foxglove_derive", optional = true }
futures-util = { version = "0.3.31", features = ["sink", "std"], optional = true }
mcap.workspace = true
parking_lot = "0.12.4"
prost-types.workspace = true
prost.workspace = true
schemars = { version = "1.0.4", optional = true }
serde_json = "1.0"
serde_repr = { version = "0.1.19", optional = true }
serde_with = { version = "3.14.0", features = ["macros", "base64"], optional = true }
serde.workspace = true
smallvec = "1.15.1"
smallbytes = "0.1.0"
thiserror.workspace = true
tokio-rustls = { version = "0.26.0", optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true
urlencoding = "2.1.3"
rcgen = { version = "0.14.3", features = ["crypto", "pem", "x509-parser"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
insta = { version = "1.42.2", features = ["json"] }
maplit = "1.0.2"
tempfile = "3.15.0"
tracing-test.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
